# cloud-computing-project

./: AGENTS.md  Dockerfile  cloudbuild-analysis.yaml  cloudbuild.yaml  pyproject.toml
.pi/extensions/: agents-reminder.ts  py-notebook-rules.ts
docs/: architecture.md  gcp_architecture_script.md  mlops_platform.md
docs/analysis_output/: conclusiones.txt
infra/: gpu_startup.sh
reports/eda/: conclusiones_empath.txt  conclusiones_sentimiento.txt  main.typ
reports/training/: metrics.json
reports/training/model/: feature_pipeline.joblib  lgbm_identity_hate.joblib  lgbm_insult.joblib  lgbm_obscene.joblib  lgbm_severe_toxic.joblib  lgbm_toxic.joblib  metadata.json
src/: analysis_empath.py  analysis_sentiment.py  analysis_sentiment_advanced.py  analysis_toxic_comments.py
src/cloud_function/: main.py  requirements.txt
src/serving/: predictor.py  train.py
src/trainer/: evaluation.py  features.py  model.py  train.py  utils.py
src/training/: submit_training.py
statistical_toolbelt/: __init__.py  config.py  correlation.py  descriptive.py  fitness.py  inference.py  io_utils.py  ml_recommendations.py  normality.py  overview.py  preprocessing.py  readiness.py  runner.py  types.py  visualization.py
